# DoAnCaro

./: .gitignore  Background.h  BuildGameResources.h  BuildResourcesGame.h  CARO.cpp  CaroUI.cpp  Destroy.h  FinalCaroUI.vcxproj  FinalCaroUI.vcxproj.filters  HelloSDL.sln  HelloSDL.vcxproj  InputManager.h  MainGameController.cpp  MainGameUI.cpp  MainMenu.h  Print.h  Project1.vcxproj  Project1.vcxproj.filters  README.md  ResourcesGame.h  ResourcesManager.h  Settings.h  ingame.cpp  ingame.h  main.cpp  menu.cpp  menu.h
CARO/: CARO.cpp  CARO.vcxproj  CARO.vcxproj.filters  CMakeLists.txt  GameState.cpp  MainGameController.cpp  MainGameLogic.cpp  MainGameUI.cpp  MenuController.cpp  PrintMenuScreen.cpp  Video.cpp  caro_enum.h  choose_difficulty_screen.h  choose_mode_screen.h  game_state.h  main_game_screen.h  utitlity.h
CARO/MyCode/: CaroUI.cpp
CARO/include/: Audio.h  CaroEnum.h  ChooseTypeGame.h  GameState.h  ImageProcessing.h  MainGameController.h  MainGameLogic.h  MainGameUI.h  MenuController.h  MenuUI.h  PrintMenuScreen.h  Save.h  Settings.h  Texture.h  Timer.h  Video.h  caro_enum.h  choose_board_screen.h  choose_difficulty_screen.h  choose_mode_screen.h  game_state.h  main_game_screen.h  play_again_screen.h  start_screen.h  utitlity.h
CARO/include/MyCode/: Background.h  Destroy.h  (+6 more)
CARO/saves/: save_1.txt  save_2.txt  save_3.txt
CARO/source_files/: GameState.cpp
CARO/src/: Audio.cpp  GameState.cpp  ImageProcessing.cpp  MainGameController.cpp  MainGameLogic.cpp  MainGameUI.cpp  MenuController.cpp  PrintMenuScreen.cpp  Save.cpp  Texture.cpp  Timer.cpp  Video.cpp
(+45 files in other folders)
